@@ -21,7 +21,7 @@ data.raw["assembling-machine"]["kr-filtration-plant"].fluid_boxes = {
     pipe_covers = pipecoverspictures(),
     base_area = 10,
     base_level = -1,
-    pipe_connections = {{type = "input-output", position = {0, -4}}},
+    pipe_connections = {{type = "input", position = {0, -4}}},
   },
   {
     production_type = "input",
@@ -29,7 +29,7 @@ data.raw["assembling-machine"]["kr-filtration-plant"].fluid_boxes = {
     pipe_covers = pipecoverspictures(),
     base_area = 10,
     base_level = 1,
-    pipe_connections = {{type = "input-output", position = {-4, 0}}},
+    pipe_connections = {{type = "input", position = {-4, 0}}},
   },
   -- Outputs
   {
@@ -38,7 +38,7 @@ data.raw["assembling-machine"]["kr-filtration-plant"].fluid_boxes = {
     pipe_covers = pipecoverspictures(),
     base_area = 10,
     base_level = 1,
-    pipe_connections = {{type = "input-output", position = {4, 0}}},
+    pipe_connections = {{type = "output", position = {4, 0}}},
   },
   {
     production_type = "output",
@@ -46,7 +46,7 @@ data.raw["assembling-machine"]["kr-filtration-plant"].fluid_boxes = {
     pipe_covers = pipecoverspictures(),
     base_area = 10,
     base_level = 1,
-    pipe_connections = {{type = "input-output", position = {0, 4}}},
+    pipe_connections = {{type = "output", position = {0, 4}}},
   },
   off_when_no_fluid_recipe = false,
 }
@@ -59,7 +59,7 @@ data.raw["assembling-machine"]["kr-matter-assembler"].fluid_boxes = {
     pipe_covers = pipecoverspictures(),
     base_area = 10,
     base_level = -1,
-    pipe_connections = {{type = "input-output", position = {0, -4}}},
+    pipe_connections = {{type = "input", position = {0, -4}}},
   },
   {
     production_type = "input",
@@ -67,7 +67,7 @@ data.raw["assembling-machine"]["kr-matter-assembler"].fluid_boxes = {
     pipe_covers = pipecoverspictures(),
     base_area = 10,
     base_level = 1,
-    pipe_connections = {{type = "input-output", position = {-4, 0}}},
+    pipe_connections = {{type = "input", position = {-4, 0}}},
   },
   -- Outputs
   {
@@ -76,7 +76,7 @@ data.raw["assembling-machine"]["kr-matter-assembler"].fluid_boxes = {
     pipe_covers = pipecoverspictures(),
     base_area = 10,
     base_level = 1,
-    pipe_connections = {{type = "input-output", position = {4, 0}}},
+    pipe_connections = {{type = "output", position = {4, 0}}},
   },
   {
     production_type = "output",
@@ -84,7 +84,7 @@ data.raw["assembling-machine"]["kr-matter-assembler"].fluid_boxes = {
     pipe_covers = pipecoverspictures(),
     base_area = 10,
     base_level = 1,
-    pipe_connections = {{type = "input-output", position = {0, 4}}},
+    pipe_connections = {{type = "output", position = {0, 4}}},
   },
   off_when_no_fluid_recipe = false,
 }
@@ -97,7 +97,7 @@ data.raw["assembling-machine"]["kr-matter-plant"].fluid_boxes = {
     pipe_covers = pipecoverspictures(),
     base_area = 10,
     base_level = -1,
-    pipe_connections = {{type = "input-output", position = {0, -4}}},
+    pipe_connections = {{type = "input", position = {0, -4}}},
   },
   {
     production_type = "input",
@@ -105,7 +105,7 @@ data.raw["assembling-machine"]["kr-matter-plant"].fluid_boxes = {
     pipe_covers = pipecoverspictures(),
     base_area = 10,
     base_level = 1,
-    pipe_connections = {{type = "input-output", position = {-4, 0}}},
+    pipe_connections = {{type = "input", position = {-4, 0}}},
   },
   -- Outputs
   {
@@ -114,7 +114,7 @@ data.raw["assembling-machine"]["kr-matter-plant"].fluid_boxes = {
     pipe_covers = pipecoverspictures(),
     base_area = 10,
     base_level = 1,
-    pipe_connections = {{type = "input-output", position = {4, 0}}},
+    pipe_connections = {{type = "output", position = {4, 0}}},
   },
   {
     production_type = "output",
@@ -122,7 +122,7 @@ data.raw["assembling-machine"]["kr-matter-plant"].fluid_boxes = {
     pipe_covers = pipecoverspictures(),
     base_area = 10,
     base_level = 1,
-    pipe_connections = {{type = "input-output", position = {0, 4}}},
+    pipe_connections = {{type = "output", position = {0, 4}}},
   },
   off_when_no_fluid_recipe = false,
 }
