@@ -46,8 +46,8 @@ sp-ammonia=Ammonia
 sp-antimatter=Antimatter
 sp-aqueous-niobium=Aqueous niobium
 sp-aqueous-tantalum=Aqueous tantalum
-sp-bealch=Bleach
 sp-benzene=Benzene
+sp-bleach=Bleach
 sp-chlorine=Chlorine
 sp-chronomatter=Chronomatter
 sp-coolant=Coolant
@@ -65,6 +65,7 @@ sp-dirty-water-with-tin=Dirty water with tin
 sp-dirty-water-with-titanium=Dirty water with titanium
 sp-dirty-water-with-tungsten=Dirty water with tungsten
 sp-dirty-water-with-zinc=Dirty water with zinc
+sp-epoxy=Epoxy
 sp-ethylene=Ethylene
 sp-ethylene-dichloride=Ethylene dichloride
 sp-grobgnum-hydroxide=Grobgnum hydroxide
@@ -216,7 +217,6 @@ sp-enriched-titanium=Enriched titanium
 sp-enriched-tungsten=Enriched tungsten
 sp-enriched-zinc=Enriched zinc
 sp-entangled-leptons=Entangled leptons
-sp-epoxy=Epoxy
 sp-evolution-cell-container=Evolution cell container
 sp-evolution-pulse-cell=Evolution pulse cell
 sp-extreme-data-transfer-controller=Extreme data transfer controller
